# advent-of-code

./: .gitignore
2021/: .gitignore  package-lock.json  package.json  pyproject.toml  tsconfig.json
2021/aoc/: utils.py
2021/aoc/day_1/: solution.py
2021/aoc/day_2/: solution.py
2021/aoc/day_3/: solution.py
2021/aoc/day_4/: input.py  models.py  solution.py
2021/src/: lib.rs  utils.ts
2021/src/day-01/: solution.spec.ts
2021/src/day-02/: solution.spec.ts
2021/src/day-03/: solution.ts
2021/src/day-04/: models.ts  solution.spec.ts  solution.ts
2021/src/day-05/: solution.spec.ts  solution.ts
2021/src/day-06/: solution.spec.ts
2021/src/day-07/: solution.spec.ts  solution.ts
2021/src/day-09/: solution.spec.ts
2021/src/day-1/: solution.ts
2021/src/day-10/: solution.spec.ts  solution.ts
2021/src/day-11/: solution.spec.ts  solution.ts
2021/src/day-12/: solution.spec.ts  solution.ts
2021/src/day-13/: solution.spec.ts  solution.ts
2021/src/day-14/: solution.spec.ts  solution.ts
2021/src/day-2/: solution.ts
2021/src/day-3/: solution.spec.ts  solution.ts
2021/src/day-4/: input.txt  models.ts
2021/src/day-5/: models.ts  solution.ts
2021/src/day-6/: solution.ts
2021/src/day-7/: solution.ts
2021/src/day-8/: solution.spec.ts  solution.ts
2021/src/day-9/: solution.ts
2021/src/day_1/: mod.rs
2021/src/day_2/: mod.rs
2021/tests/: test_aoc.py  test_day_1.py  test_day_2.py  test_day_3.py  test_day_4.py
2022/: pyproject.toml  tox.ini
2022/aoc/: utils.py
2022/aoc/day_01/: __init__.py  solution.py
2022/aoc/day_02/: solution.py
(+45 files in other folders)
