[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Will Soto <willsoto@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
ipython = "^7.30.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
