[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Will Soto <willsoto@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
ipython = "^7.30.1"
black = "^21.12b0"
pytest = "^6.2.5"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
