[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Will Soto <willsoto@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"
black = "^22.12.0"
ipython = "^8.7.0"
numpy = "^1.24.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
ipdb = "^0.13.11"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
